Add footer infomation

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sang Vo Blog
-email: sangvo111@example.com
+email: sangvo111@gmail.com
 name: Sang Vo
 position: Ruby on Rails Developer
 description: >-
