--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ position: Ruby on Rails Developer
 description: >-
   Nơi chia sẻ các bài viết về kĩ thuật, kinh nghiệm làm việc của bản thân.
 baseurl: ""
-url: ""
+url: "https://blog.sangv2.com"
 
 # Author settings
 author:
