--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ author:
     Hi, I'm Sang. I'm based in Da Nang, currently work as a Backend Engineer at Sun*.
   twitter_username: sangvo111
   github_username: sangvo
+  linkedin: sangvo97
 
 twitter:
   username: sangvo111
