Fix tracking google anylatic

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -46,7 +46,7 @@ experiences:
     date: 09/2019 - 12/2019
     location: Da Nang, VN
     description_bullets:
-    - Training concept about Ruby On Rails and technology.
+    - Training about Ruby On Rails.
     - Built first internal project using Ruby On Rails.
 
 skills:
